# NcnnYolovX

./: .gitignore  CMakeLists.txt  README.md  build_bcc32.sh  build_bcc32x.sh  build_bcc64.sh  build_host.sh  build_mingw.sh  yolov8-ncnn-opencv-deploy.ipynb
assets/: yolov8-cls.classes  yolov8s-cls.param  yolov8s-seg.param  yolov8s.param
cmake/: Dependencies.cmake  ExternalNcnn.cmake
include/OIYolo/: CommonTypes.hpp  TimeMeasuring.hpp  V8.hpp  V8Cls.hpp
src/ncnn_port/: V8.cpp  V8Cls.cpp  common.cpp  common.hpp
test/: CMakeLists.txt  NcnnYolov8ClsTest.cpp  NcnnYolov8Test.cpp  NcnnYolov8Test1.cpp
